Fixing footer on mobile < 480px

--- a/css/styl/footer.styl
+++ b/css/styl/footer.styl
@@ -28,9 +28,12 @@ footer
 		#footer_content
 			display: flex;
 			flex-direction: row;
-			// justify-content: center;
+			justify-content: center;
 			width: 520px;
 			padding-top: 160px;
+
+			p
+				margin: 0;
 
 			@media screen and (max-width: 560px)
 				font-size: 14px;
@@ -39,4 +42,7 @@ footer
 
 			@media screen and (max-width: 340px)
 				width: 240px;
-				padding-top: 64px;
+				padding-top: 68px;
+
+			.contact
+				padding-left: 8px;
